--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,17 @@
-<div ngbAccordion>
-  <div ngbAccordionItem>
-    <h2 ngbAccordionHeader>
-      <button ngbAccordionButton>First</button>
-    </h2>
-    <div ngbAccordionCollapse>
-      <div ngbAccordionBody>
-        <ng-template>Content for the first item</ng-template>
-      </div>
-    </div>
+<div class="m-4 main-background main-grid" id="main">
+  <div class="wac-navbar" id="navbar">
+    navbar
+  </div>
+  <div class="header" id="header">
+    header
+  </div>
+  <div class="conversation" id="conversation">
+    conversation
+  </div>
+  <div class="chat" id="chat">
+    chat
+  </div>
+  <div class="sent-message" id="sent-message">
+    sent-message
   </div>
 </div>
