--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
     header
   </div>
   <div class="conversation" id="conversation">
-    conversation
+    <wac-conversations></wac-conversations>
   </div>
   <div class="chat" id="chat">
     chat
